proxmox-talos/apps/immich/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-nodeport
  namespace: immich
spec:
  type: NodePort
  selector:
    app: immich-server
  ports:
  - port: 2283
    targetPort: 2283
    nodePort: 30283
